--- a/tasks/ruby.yml
+++ b/tasks/ruby.yml
@@ -1,4 +1,9 @@
 ---
+- name: install git
+  yum: state=present name={{ item }}
+  with_items:
+    - git
+
 - name: checkout rbenv from {{ rbenv.repo }}
   git: repo={{ rbenv.repo }}
        dest={{ rbenv.root }}
